[package]
name = "sysproxy"
version = "0.3.0"
edition = "2021"
authors = ["zzzgydi"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/zzzgydi/sysproxy-rs.git"
keywords = ["system-proxy", "proxy", "networksetup", "gsettings"]
description = "A library for set/get system proxy. Supports Windows, macOS and linux (via gsettings)."

[dependencies]
thiserror = "1"

[target.'cfg(target_os = "linux")'.dependencies]
xdg = "^2.5"

[target.'cfg(target_os = "macos")'.dependencies]
interfaces = "0.0.8"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = {version = "0.10", features = ["transactions"]}
winapi = {version = "0.3.9", features= ["wininet"]}