[package]
name = "sysproxy"
version = "0.3.0"
edition = "2021"
authors = ["zzzgydi"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/zzzgydi/sysproxy-rs.git"
keywords = ["system-proxy", "proxy", "networksetup", "gsettings"]
description = "A library for set/get system proxy. Supports Windows, macOS and linux (via gsettings)."

[dependencies]
thiserror = "1"

[target.'cfg(target_os = "macos")'.dependencies]
interfaces = "0.0.8"

[target.'cfg(target_os = "windows")'.dependencies]
iptools = "0.2.4"
winreg = { version = "0.10", features = ["transactions"] }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.52"
features = [
    "Win32_Networking_WinInet",
    # "Win32_Networking_WinHttp",
    "Win32_NetworkManagement_Rras",
    "Win32_Foundation",
]
